tests/miniJava/neg/006411_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while ( public int [] java ( ) { return 0 ; } ) { } } }
